--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,8 +1,12 @@
 
+html { font-size: 16px; }
+
+
 /* Cards general */
 
 .overlay-title {
-    font-size: 1.55rem;
+    font-size: 0.9rem;
+    font-weight: 500;
     color: rgb(231, 215, 235);
     text-shadow: 0 0 0.5vw rgb(211, 164, 208);
     
@@ -23,6 +27,7 @@
 }
 
 .ellipses {
+    font-size: 0.8rem;
     height: 1rem;
     white-space: nowrap; 
     overflow:hidden;
@@ -46,15 +51,15 @@
 }
 
 .stream {
-    min-width: 16rem;
-    max-width: 20rem;
+    min-width: 12rem;
+    max-width: 16rem;
     margin-bottom: 0.5rem;
 }
 
 /* Categories */
 .category {
-    min-width: 6rem;
-    max-width: 8rem;
+    min-width: 7rem;
+    max-width: 9rem;
     margin-bottom: 0.5rem;
 }
 
@@ -112,6 +117,7 @@
     height: 100%;
     min-height: 100vh ;
 }
+
 
 
 /* Nav */
